syntax = "proto3";

option go_package = "./pb";

package pb;

message GetSeqIdReq {
  uint64 userId = 1;
}

message GetSeqIdResp {
  uint64 seqId = 1;
}

service seq {
  rpc GetSeqId(GetSeqIdReq) returns(GetSeqIdResp);
}
